HUB-407: Fix teaching login link visibility on IE11

--- a/themes/uhsg_theme/sass/components/_main-menu.scss
+++ b/themes/uhsg_theme/sass/components/_main-menu.scss
@@ -84,7 +84,7 @@ body.guide-teacher-helsinki-fi {
     li {
       display: none;
       &:last-child {
-        display: initial;
+        display: block;
       }
       a {
         font-size: initial;
